--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
     <title>Smart Cookie Bakery</title>
 </head>
 <body>
-    <h1>Welcome to the Smart Cookie Bakery Website!</h1>
+    <h1 class="titleText">Welcome to the Smart Cookie Bakery Website!</h1>
+    <img class="coverImage" src="assets/cupcake.jpg" alt="an imAge of a tiramisu cupcake with mascarpone cheese frosting and coffee-soaked cake base" height="300" />
 </body>
 </html>
